[tool.poetry]
name = "lab-pet"
version = "0.1.0"
description = ""
authors = ["emma <eqbrown@isf.edu.hk>"]
readme = "README.md"
packages = [{include = "lab_pet"}]

[tool.poetry.dependencies]
python = "^3.10"
simple-term-menu = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
